--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #062c52;
+$primary: #cdcdcd;
 $secondary: #26a69a;
 $accent: #9c27b0;
 
